--- a/TempleAll/TempleAll/TempleAll.csproj
+++ b/TempleAll/TempleAll/TempleAll.csproj
@@ -188,6 +188,24 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>HistoryModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Knowledge.cs">
+      <DependentUpon>KnowledgeModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="KnowledgeModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KnowledgeModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="KnowledgeModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KnowledgeModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="KnowledgeModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KnowledgeModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -269,6 +287,23 @@
       <DependentUpon>HistoryModel.edmx</DependentUpon>
       <LastGenOutput>HistoryModel.cs</LastGenOutput>
     </Content>
+    <EntityDeploy Include="KnowledgeModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>KnowledgeModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="KnowledgeModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>KnowledgeModel.edmx</DependentUpon>
+      <LastGenOutput>KnowledgeModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="KnowledgeModel.edmx.diagram">
+      <DependentUpon>KnowledgeModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="KnowledgeModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>KnowledgeModel.edmx</DependentUpon>
+      <LastGenOutput>KnowledgeModel.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
@@ -325,6 +360,9 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Admin\History.cshtml" />
     <Content Include="Views\Admin\AdminEditHistory.cshtml" />
+    <Content Include="Views\Admin\AdminKnowledge.cshtml" />
+    <Content Include="Views\Admin\AdminEditKnowledge.cshtml" />
+    <Content Include="Views\Admin\CreateKnowledge.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
