--- a/TempleAll/TempleAll/Web.config
+++ b/TempleAll/TempleAll/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-TempleAll-20150503134550;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-TempleAll-20150503134550.mdf" providerName="System.Data.SqlClient" />
     <add name="TempledbEntities" connectionString="metadata=res://*/HistoryModel.csdl|res://*/HistoryModel.ssdl|res://*/HistoryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Templedb.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KnowledgedbEntities" connectionString="metadata=res://*/KnowledgeModel.csdl|res://*/KnowledgeModel.ssdl|res://*/KnowledgeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Templedb.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
