Update Send Email

--- a/TempleAll/TempleAll/TempleAll.csproj
+++ b/TempleAll/TempleAll/TempleAll.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SendEmailController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -207,6 +208,7 @@
       <DependentUpon>KnowledgeModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\EmailModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -363,6 +365,7 @@
     <Content Include="Views\Admin\AdminKnowledge.cshtml" />
     <Content Include="Views\Admin\AdminEditKnowledge.cshtml" />
     <Content Include="Views\Admin\CreateKnowledge.cshtml" />
+    <Content Include="Views\SendEmail\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
